--- a/index.html
+++ b/index.html
@@ -351,6 +351,23 @@
             </select>
         </div>
 
+        <!-- Offline Download Section -->
+        <div class="panel p-4 bg-white">
+            <h3 class="font-bold text-sm mb-2">オフライン動作の準備</h3>
+            <p class="text-xs text-gray-500 mb-2">ボタンを押すと、全てのモデルとテスト画像をダウンロードして保存します。</p>
+            <button id="btn-download-offline"
+                class="w-full bg-gray-100 text-gray-700 border border-gray-300 py-2 rounded text-sm font-bold"
+                onclick="downloadOfflineAssets()">
+                データを一括ダウンロード (約100MB)
+            </button>
+            <div id="download-progress" class="hidden mt-2">
+                <div class="text-xs text-right mb-1" id="download-status">0%</div>
+                <div class="h-2 bg-gray-200 rounded overflow-hidden">
+                    <div id="download-bar" class="h-full bg-green-500 w-0 transition-all duration-200"></div>
+                </div>
+            </div>
+        </div>
+
         <!-- Tabs -->
         <div class="tabs">
             <div class="tab active" onclick="switchTab('bench')">1. 精度実験 (200枚)</div>
@@ -578,6 +595,78 @@
                 alert("Init Error: " + e.message);
             }
         };
+
+        async function downloadOfflineAssets() {
+            const btn = document.getElementById('btn-download-offline');
+            const progressDiv = document.getElementById('download-progress');
+            const statusBar = document.getElementById('download-bar');
+            const statusText = document.getElementById('download-status');
+
+            if (!confirm("約100MBのデータをダウンロードします。Wi-Fi環境を推奨します。\n開始しますか？")) return;
+
+            btn.disabled = true;
+            btn.textContent = "ダウンロード中...";
+            progressDiv.classList.remove('hidden');
+
+            const CACHE_NAME = 'lmfrnet-benchmark-v2'; // Must match sw.js
+
+            try {
+                // 1. Static Assets
+                let assets = [
+                    './',
+                    './index.html',
+                    './manifest.json',
+                    './labels.json',
+                    './samples.json',
+                    './models_caltech101/lmfrnet.onnx',
+                    './models_caltech101/lmfrnet_hires.onnx',
+                    './models_caltech101/mobilenetv3_large.onnx',
+                    './models_caltech101/resnet18.onnx',
+                    'https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js',
+                    'https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort-wasm.wasm',
+                    'https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort-wasm-simd.wasm',
+                    'https://cdn.tailwindcss.com'
+                ];
+
+                // 2. Add Sample Images
+                const samplesRes = await fetch('samples.json');
+                const samples = await samplesRes.json();
+                samples.forEach(s => assets.push(`./samples/${s.filename}`));
+
+                const total = assets.length;
+                let count = 0;
+
+                const cache = await caches.open(CACHE_NAME);
+
+                // Sequential fetch to avoid network errors
+                for (const url of assets) {
+                    try {
+                        const req = new Request(url, { mode: 'cors' });
+                        const res = await fetch(req);
+                        if (res.ok) {
+                            await cache.put(req, res);
+                        }
+                    } catch (e) {
+                        console.error('Failed to cache:', url, e);
+                    }
+
+                    count++;
+                    const percent = Math.floor((count / total) * 100);
+                    statusBar.style.width = `${percent}%`;
+                    statusText.textContent = `${count}/${total} (${percent}%)`;
+                }
+
+                alert("ダウンロード完了！\nこれで機内モードでも動作します。");
+                btn.textContent = "ダウンロード済み (オフライン準備OK)";
+                btn.classList.remove('bg-gray-100', 'text-gray-700');
+                btn.classList.add('bg-green-100', 'text-green-800');
+
+            } catch (e) {
+                alert("エラーが発生しました: " + e.message);
+                btn.disabled = false;
+                btn.textContent = "データを一括ダウンロード (約100MB)";
+            }
+        }
 
         function initModelSelect() {
             modelSelect.innerHTML = '';
