--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             });
         }
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
+    <script src="./ort.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* ライトモード設定 */
@@ -626,9 +626,9 @@
                     './models_caltech101/lmfrnet_hires.onnx',
                     './models_caltech101/mobilenetv3_large.onnx',
                     './models_caltech101/resnet18.onnx',
-                    'https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js',
-                    'https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort-wasm.wasm',
-                    'https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort-wasm-simd.wasm',
+                    './ort.min.js',
+                    './ort-wasm.wasm',
+                    './ort-wasm-simd.wasm',
                     'https://cdn.tailwindcss.com'
                 ];
 
@@ -644,18 +644,10 @@
 
                 for (const url of assets) {
                     try {
-                        const fileName = url.split('/').pop();
-                        statusLabel.textContent = `ダウンロード中: ${fileName}`;
-
+                        statusLabel.textContent = `ダウンロード中: ${url.split('/').pop()}`;
                         const res = await fetch(url, { mode: 'cors', cache: 'reload' });
-
                         if (res.ok) {
-                            // If it's a WASM file from CDN, save it as a local path
-                            if (url.includes('ort-wasm')) {
-                                await cache.put(`./${fileName}`, res);
-                            } else {
-                                await cache.put(url, res);
-                            }
+                            await cache.put(url, res);
                         }
                     } catch (e) {
                         console.error('Failed to cache:', url, e);
