Final Offline Fix: Download Tailwind CSS locally to remove the last CDN dependency and ensure 100% offline functionality

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
     </script>
     <script src="./ort.min.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./tailwind.min.js"></script>
     <style>
         /* ライトモード設定 */
         :root {
@@ -629,7 +629,7 @@
                     './ort.min.js',
                     './ort-wasm.wasm',
                     './ort-wasm-simd.wasm',
-                    'https://cdn.tailwindcss.com'
+                    './tailwind.min.js'
                 ];
 
                 statusLabel.textContent = "リスト取得中...";
